@@ -55,9 +55,11 @@ hp.swbuffcorrupt, hp.swbufferfree, hp.swbufferinit, hp.swbuffermin, \
 hp.swbuffermiss, hp.swbuffersize, hp.swfreemem, hp.switchcpu, hp.swmemalloc, hp.swtotalmem, \
 hpux.cpu, hpux.memory, hpux.numFsMounted, hpux.numProcs, hpux.numUsers, hpux.swap, \
 juniper.bufferPoolUtil, juniper.cpu, juniper.temp, \
-microsoft.cpuPercentBusy, microsoft.diskSpaceC, microsoft.diskSpaceD, microsoft.memory, \
-netsnmp.context, netsnmp.diskroot, netsnmp.diskrootpercent, netsnmp.hrMemory, \
-netsnmp.hrNumUsers, netsnmp.hrSystemProcesses, netsnmp.interrupts, \
+microsoft.cpuPercentBusy, microsoft.hrDisk2, microsoft.hrDisk3, microsoft.hrDisk4, microsoft.memory, \
+netsnmp.context, \
+netsnmp.disk1, netsnmp.disk1percent, netsnmp.disk2, netsnmp.disk2percent, \
+netsnmp.disk3, netsnmp.disk3percent, netsnmp.disk4, netsnmp.disk4percent, netsnmp.disk5, netsnmp.disk5percent, \
+netsnmp.hrMemory, netsnmp.hrNumUsers, netsnmp.interrupts, \
 netsnmp.hrSystemUptime, netsnmp.loadavg, netsnmp.swapinout, \
 netBotz.air, netBotz.humid, netBotz.temp, \
 nortel.kernelmem, nortel.kerneltasks, \
@@ -1375,14 +1377,15 @@ report.microsoft.cpuPercentBusy.command=--title="CPU Utilization" \
  GPRINT:cpuPercentBusy:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:cpuPercentBusy:MAX:"Max  \\: %8.2lf %s\\n"
 
-report.microsoft.diskSpaceC.name=Disk Space Drive C (Windows NT/2000)
-report.microsoft.diskSpaceC.columns=sizeDriveC,usedDriveC,unitsDriveC
-report.microsoft.diskSpaceC.type=node
-report.microsoft.diskSpaceC.command=--title="Disk Space Drive C" \
+report.microsoft.hrDisk2.name=Disk Space Drive 2 (Windows NT/2000)
+report.microsoft.hrDisk2.columns=hrSizeDisk2, hrUsedDisk2, hrUnitsDisk2
+report.microsoft.hrDisk2.type=node
+report.microsoft.hrDisk2.propertiesValues=hrDescDisk2
+report.microsoft.hrDisk2.command=--title="Disk Space Drive {hrDescDisk2}" \
  --units-exponent 0 \
- DEF:total={rrd1}:sizeDriveC:AVERAGE \
- DEF:used={rrd2}:usedDriveC:AVERAGE \
- DEF:units={rrd3}:unitsDriveC:AVERAGE \
+ DEF:total={rrd1}:hrSizeDisk2:AVERAGE \
+ DEF:used={rrd2}:hrUsedDisk2:AVERAGE \
+ DEF:units={rrd3}:hrUnitsDisk2:AVERAGE \
  CDEF:totalGB=total,units,*,1024,/,1024,/,1024,/ \
  CDEF:freeGB=total,used,-,units,*,1024,/,1024,/,1024,/ \
  LINE2:totalGB#0000ff:"Total Space (GBytes)" \
@@ -1394,14 +1397,35 @@ report.microsoft.diskSpaceC.command=--title="Disk Space Drive C" \
  GPRINT:freeGB:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:freeGB:MAX:"Max  \\: %8.2lf %s\\n"
 
-report.microsoft.diskSpaceD.name=Disk Space Drive D (Windows NT/2000)
-report.microsoft.diskSpaceD.columns=sizeDriveD,usedDriveD,unitsDriveD
-report.microsoft.diskSpaceD.type=node
-report.microsoft.diskSpaceD.command=--title="Disk Space Drive D" \
+report.microsoft.hrDisk3.name=Disk Space Drive 3 (Windows NT/2000)
+report.microsoft.hrDisk3.columns=hrSizeDisk3, hrUsedDisk3, hrUnitsDisk3
+report.microsoft.hrDisk3.type=node
+report.microsoft.hrDisk3.propertiesValues=hrDescDisk3
+report.microsoft.hrDisk3.command=--title="Disk Space Drive {hrDescDisk3}" \
  --units-exponent 0 \
- DEF:total={rrd1}:sizeDriveD:AVERAGE \
- DEF:used={rrd2}:usedDriveD:AVERAGE \
- DEF:units={rrd3}:unitsDriveD:AVERAGE \
+ DEF:total={rrd1}:hrSizeDisk3:AVERAGE \
+ DEF:used={rrd2}:hrUsedDisk3:AVERAGE \
+ DEF:units={rrd3}:hrUnitsDisk3:AVERAGE \
+ CDEF:totalGB=total,units,*,1024,/,1024,/,1024,/ \
+ CDEF:freeGB=total,used,-,units,*,1024,/,1024,/,1024,/ \
+ LINE2:totalGB#0000ff:"Total Space (GBytes)" \
+ GPRINT:totalGB:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:totalGB:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:totalGB:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:freeGB#ff0000:"Free Space (GBytes)" \
+ GPRINT:freeGB:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:freeGB:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:freeGB:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.microsoft.hrDisk4.name=Disk Space Drive 4 (Windows NT/2000)
+report.microsoft.hrDisk4.columns=hrSizeDisk4, hrUsedDisk4, hrUnitsDisk4
+report.microsoft.hrDisk4.type=node
+report.microsoft.hrDisk4.propertiesValues=hrDescDisk4
+report.microsoft.hrDisk4.command=--title="Disk Space Drive {hrDescDisk4}" \
+ --units-exponent 0 \
+ DEF:total={rrd1}:hrSizeDisk4:AVERAGE \
+ DEF:used={rrd2}:hrUsedDisk4:AVERAGE \
+ DEF:units={rrd3}:hrUnitsDisk4:AVERAGE \
  CDEF:totalGB=total,units,*,1024,/,1024,/,1024,/ \
  CDEF:freeGB=total,used,-,units,*,1024,/,1024,/,1024,/ \
  LINE2:totalGB#0000ff:"Total Space (GBytes)" \
@@ -1530,12 +1554,13 @@ report.netsnmp.cpuStats.command=--title="CPU Statistics" \
  COMMENT:" " \
  LINE1:float15#000000:"15 minutes\\n"
 
-report.netsnmp.diskroot.name=Disk Space on / 
-report.netsnmp.diskroot.columns=ns-disk-root-tot, ns-disk-root-used
-report.netsnmp.diskroot.type=node
-report.netsnmp.diskroot.command=--title="Disk Space on /" \
- DEF:dtotalk={rrd1}:ns-disk-root-tot:AVERAGE \
- DEF:dusedk={rrd2}:ns-disk-root-used:AVERAGE \
+report.netsnmp.disk1.name=Disk Space on 1 
+report.netsnmp.disk1.columns=ns-disk-1-tot, ns-disk-1-used
+report.netsnmp.disk1.type=node
+report.netsnmp.disk1.propertiesValues=ns-disk-1-name
+report.netsnmp.disk1.command=--title="Disk Space on {ns-disk-1-name}" \
+ DEF:dtotalk={rrd1}:ns-disk-1-tot:AVERAGE \
+ DEF:dusedk={rrd2}:ns-disk-1-used:AVERAGE \
  CDEF:dtotal=dtotalk,1024,* \
  CDEF:dused=dusedk,1024,* \
  LINE2:dtotal#0000ff:"Disk Space Total" \
@@ -1547,11 +1572,128 @@ report.netsnmp.diskroot.command=--title="Disk Space on /" \
  GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
   
-report.netsnmp.diskrootpercent.name=Percentage Disk Space on /
-report.netsnmp.diskrootpercent.columns=ns-disk-root-pct
-report.netsnmp.diskrootpercent.type=node
-report.netsnmp.diskrootpercent.command=--title="Percentage Disk Space on /" \
- DEF:dpercent={rrd1}:ns-disk-root-pct:AVERAGE \
+report.netsnmp.disk1percent.name=Percentage Disk Space on 1
+report.netsnmp.disk1percent.columns=ns-disk-1-pct
+report.netsnmp.disk1percent.type=node
+report.netsnmp.disk1percent.propertiesValues=ns-disk-1-name
+report.netsnmp.disk1percent.command=--title="Percentage Disk Space on {ns-disk-1-name}" \
+ DEF:dpercent={rrd1}:ns-disk-1-pct:AVERAGE \
+ LINE2:dpercent#0000ff:"% Disk Space Used" \
+ GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk2.name=Disk Space on 2 
+report.netsnmp.disk2.columns=ns-disk-2-tot, ns-disk-2-used
+report.netsnmp.disk2.type=node
+report.netsnmp.disk2.propertiesValues=ns-disk-2-name
+report.netsnmp.disk2.command=--title="Disk Space on {ns-disk-2-name}" \
+ DEF:dtotalk={rrd1}:ns-disk-2-tot:AVERAGE \
+ DEF:dusedk={rrd2}:ns-disk-2-used:AVERAGE \
+ CDEF:dtotal=dtotalk,1024,* \
+ CDEF:dused=dusedk,1024,* \
+ LINE2:dtotal#0000ff:"Disk Space Total" \
+ GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
+ LINE2:dused#ff0000:"Disk Space Used" \
+ GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk2percent.name=Percentage Disk Space on 2
+report.netsnmp.disk2percent.columns=ns-disk-2-pct
+report.netsnmp.disk2percent.type=node
+report.netsnmp.disk2percent.propertiesValues=ns-disk-2-name
+report.netsnmp.disk2percent.command=--title="Percentage Disk Space on {ns-disk-2-name}" \
+ DEF:dpercent={rrd1}:ns-disk-2-pct:AVERAGE \
+ LINE2:dpercent#0000ff:"% Disk Space Used" \
+ GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk3.name=Disk Space on 3 
+report.netsnmp.disk3.columns=ns-disk-3-tot, ns-disk-3-used
+report.netsnmp.disk3.type=node
+report.netsnmp.disk3.propertiesValues=ns-disk-3-name
+report.netsnmp.disk3.command=--title="Disk Space on {ns-disk-3-name}" \
+ DEF:dtotalk={rrd1}:ns-disk-3-tot:AVERAGE \
+ DEF:dusedk={rrd2}:ns-disk-3-used:AVERAGE \
+ CDEF:dtotal=dtotalk,1024,* \
+ CDEF:dused=dusedk,1024,* \
+ LINE2:dtotal#0000ff:"Disk Space Total" \
+ GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
+ LINE2:dused#ff0000:"Disk Space Used" \
+ GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk3percent.name=Percentage Disk Space on 3
+report.netsnmp.disk3percent.columns=ns-disk-3-pct
+report.netsnmp.disk3percent.type=node
+report.netsnmp.disk3percent.propertiesValues=ns-disk-3-name
+report.netsnmp.disk3percent.command=--title="Percentage Disk Space on {ns-disk-3-name}" \
+ DEF:dpercent={rrd1}:ns-disk-3-pct:AVERAGE \
+ LINE2:dpercent#0000ff:"% Disk Space Used" \
+ GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk4.name=Disk Space on 4 
+report.netsnmp.disk4.columns=ns-disk-4-tot, ns-disk-4-used
+report.netsnmp.disk4.type=node
+report.netsnmp.disk4.propertiesValues=ns-disk-4-name
+report.netsnmp.disk4.command=--title="Disk Space on {ns-disk-4-name}" \
+ DEF:dtotalk={rrd1}:ns-disk-4-tot:AVERAGE \
+ DEF:dusedk={rrd2}:ns-disk-4-used:AVERAGE \
+ CDEF:dtotal=dtotalk,1024,* \
+ CDEF:dused=dusedk,1024,* \
+ LINE2:dtotal#0000ff:"Disk Space Total" \
+ GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
+ LINE2:dused#ff0000:"Disk Space Used" \
+ GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk4percent.name=Percentage Disk Space on 4
+report.netsnmp.disk4percent.columns=ns-disk-4-pct
+report.netsnmp.disk4percent.type=node
+report.netsnmp.disk4percent.propertiesValues=ns-disk-4-name
+report.netsnmp.disk4percent.command=--title="Percentage Disk Space on {ns-disk-4-name}" \
+ DEF:dpercent={rrd1}:ns-disk-4-pct:AVERAGE \
+ LINE2:dpercent#0000ff:"% Disk Space Used" \
+ GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk5.name=Disk Space on 5 
+report.netsnmp.disk5.columns=ns-disk-5-tot, ns-disk-5-used
+report.netsnmp.disk5.type=node
+report.netsnmp.disk5.propertiesValues=ns-disk-5-name
+report.netsnmp.disk5.command=--title="Disk Space on {ns-disk-5-name}" \
+ DEF:dtotalk={rrd1}:ns-disk-5-tot:AVERAGE \
+ DEF:dusedk={rrd2}:ns-disk-5-used:AVERAGE \
+ CDEF:dtotal=dtotalk,1024,* \
+ CDEF:dused=dusedk,1024,* \
+ LINE2:dtotal#0000ff:"Disk Space Total" \
+ GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
+ LINE2:dused#ff0000:"Disk Space Used" \
+ GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
+
+report.netsnmp.disk5percent.name=Percentage Disk Space on 5
+report.netsnmp.disk5percent.columns=ns-disk-5-pct
+report.netsnmp.disk5percent.type=node
+report.netsnmp.disk5percent.propertiesValues=ns-disk-5-name
+report.netsnmp.disk5percent.command=--title="Percentage Disk Space on {ns-disk-5-name}" \
+ DEF:dpercent={rrd1}:ns-disk-5-pct:AVERAGE \
  LINE2:dpercent#0000ff:"% Disk Space Used" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
