@@ -1,5 +1,7 @@
 1.2.0 to 1.2.1
 ----------------------------------------------------------------------
+- Added the ability to collect strings via SNMP and use them
+  to label performance reports. Bug 1115. Thx Craig.
 - Fix the opennms init script so that it works properly with chkconfig.
   Bug 1177.  Thanks Julian Gomez <JulianJose.Gomez@getronics.com>.
 - Fixed the Configure SNMP Data Collection per Interface UI to be
